--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
-<div class="column">
-<h2 class="pb-4">login:</h2><hr>
+<div>
+<h2>Login:</h2><hr>
 <form class="login-form">
   <div>
     <label for="email-login">Email:</label>
