--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,11 +1,11 @@
-    <div class="mb-5 pt-3">
-        <a href="/dashboard/create/"><button id="create-post" class="button is-pulled-right">Post</button></a>
+    <div>
+        <a href="/dashboard/create/"><button id="create-post" class="button">Post</button></a>
         
         <h2 class="pb-4">Posts</h2><hr>
 {{#if posts.length}}
     </div>
 
-    {{#each posts as |post|}}
+    {{#each posts as post}}
         {{> post-info post}}
         
             <a href="/dashboard/edit/{{post.id}}"><button class="button">Edit</button></a>
